[project]
name = "dhnote"
version = "1.0.0"
description = "Library to deal with notes of the Dharmalib project"
authors = [
    { name = "Paul Pichaureau", email = "paul.pichaureau@alcandre.net" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pinyin>=0.4.0",
    "Unidecode>=1.3.8",
    "python-frontmatter>=1.1.0",
    "chinese-converter>=1.1.1",
    "hanziconv>=0.3.2",
    "bs4>=0.0.2",
]

[project.scripts]
dhnote-sort = "dhnote.cmdline:sort_header"
dhnote-update = "dhnote.cmdline:update"
dhnote-mergedir = "dhnote.merge_dir:merge_dir"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
dhnote = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "dhnote",
]
