[project]
name = "dhnote"
version = "1.0.0"
description = "Library to deal with notes of the Dharmalib project"
authors = [
    { name = "Paul Pichaureau", email = "paul.pichaureau@alcandre.net" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pinyin>=0.4.0",
    "unidecode>=1.3.8",
    "python-frontmatter>=1.1.0",
    "chinese-converter>=1.1.1",
    "hanziconv>=0.3.2",
    "beautifulsoup4>=4.12",
]

[project.scripts]
dhnote-sort = "dhnote.cmdline:sort_header"
dhnote-update = "dhnote.cmdline:update"
dhnote-mergedir = "dhnote.merge_dir:merge_dir"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
